# Ray_Tracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
C++/: Doxyfile
C++/doc/html/: Imagem_8cpp.html  Imagem_8cpp__incl.md5  Imagem_8hpp.html  Imagem_8hpp__incl.md5  classImagem-members.html  classImagem__coll__graph.map  classImagem__coll__graph.md5  dir_09e761304027c904456130627fd4dcf5.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  globals_func.html  graph_legend.html  index.html  save__image_8cpp__incl.map
C++/doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  functions_0.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
C++/examples/: config.scene  config_1.scene  draw_config.cpp  draw_shapes.cpp  draw_sphere.cpp  save_image.cpp
C++/includes/: camera.hpp  config_reader.hpp  imagem.hpp  scene.hpp  vec3.hpp
C++/src/: camera.cpp  config_reader.cpp  imagem.cpp
CUDA/: CMakeLists.txt  teste.cu
CUDA/examples/: config.scene  draw_config.cu  draw_materials.cu  draw_shapes.cu  draw_sphere.cu  save_image.cu
CUDA/images/: exemplo_draw_material.ppm  exemplo_draw_sphere.ppm  exemplo_save_image.ppm
CUDA/includes/: camera.cuh  color.cuh  config_reader.cuh  cuda_parameters.cuh  cuda_utilities.cuh  imagem.cuh  material.cuh  ray.cuh  renderer.cuh  scene.cuh  shape.cuh  utilities.cuh  vec3.cuh
CUDA/src/: camera.cu  config_reader.cu  cuda_utilities.cu  imagem.cu  material.cu  plane.cu  renderer.cu  sphere.cu
doc/html/: Doxyfile_8doc.html  Imagem_8cpp__incl.map  Imagem_8hpp__dep__incl.map  Imagem_8hpp__dep__incl.md5  Imagem_8hpp__incl.map  Imagem_8hpp_source.html  README_8md.html  annotated.html  classImagem.html  classes.html  dir_000001_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  md_README.html  pages.html  save__image_8cpp.html  save__image_8cpp__incl.md5
doc/html/search/: all_3.js  classes_0.js  files_0.js  files_1.js  files_3.js  functions_1.js
examples/: config.scene  draw_config.cpp  draw_materials.cpp  draw_shapes.cpp  draw_sphere.cpp  save_image.cpp
images/: exemplo.ppm  exemplo_draw_config.ppm  exemplo_draw_shapes.ppm
includes/: Imagem.hpp  camera.hpp  color.hpp  config_reader.hpp  material.hpp  ray.hpp  renderer.hpp  shape.hpp  utilities.hpp  vec3.hpp
misc/: Plot_tests.ipynb  generate_random.py  results.txt  run_tests.py
src/: Imagem.cpp  config_reader.cpp  material.cpp  plane.cpp  renderer.cpp  sphere.cpp
testes/objetos/: teste0.scene  teste1.scene  teste2.scene  teste3.scene  teste4.scene  teste5.scene  teste6.scene
testes/resolucao/: teste0.scene  teste1.scene  teste2.scene  teste3.scene  teste4.scene  teste5.scene  teste6.scene  teste7.scene
testes/samples_per_pixel/: teste0.scene  teste1.scene  teste10.scene  teste2.scene  teste3.scene  teste4.scene  teste5.scene  teste6.scene  teste7.scene  teste8.scene  teste9.scene
